# QtPropertyBrowser

./: .gitignore  CMakeLists.txt  README.md
qmake/: qtpropertybrowser.pri
src/: CMakeLists.txt  QtPropertyBrowserConfig.cmake.in  qt5editorfactory.cpp  qt5propertymanager.cpp  qt5treepropertybrowser.cpp  qt6propertybrowserutils.cpp  qt6propertymanager.cpp  qtbuttonpropertybrowser.cpp  qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtgroupboxpropertybrowser.h  qtpropertybrowser.h  qtpropertybrowserglobal.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
src/qt5/: qteditorfactory.cpp  qtpropertybrowser.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp
src/qt6/: qtpropertybrowser.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp
